corrected coding error in project card and used grid to align the content bars.

--- a/styles.css
+++ b/styles.css
@@ -135,22 +135,20 @@ body {
 
 
 /*The Project Crad stylings */
-.column {
-  float: left;
-  width: 25%;
-  padding: 0 10px;
+
+.proj1 {
+  display:grid;
+  grid-template-columns: repeat(auto-fit,1fr);
+  gap: 1em;
+  
 }
 
-/* Remove extra left and right margins, due to padding */
-.row {margin: 0 -5px;}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-} 
-
+.card {
+  height: 30em;
+  width: 10em;
+  padding: 0;
+  display: grid;
+}
 
 /* Style the Project Cards */
 .card {
@@ -158,7 +156,7 @@ body {
   padding: 16px;
   text-align: left;
   background-color: #f1f1f1;
-  border-radius: 24px;
+  border-radius: 24px; 
 } 
 
 .one {
